# mom6_neus25_utils

./: .gitignore  LICENCE.md  README.md  pyproject.toml
src/mom6_neus25_utils/atmos/: era5_processor.py  readme.md
src/mom6_neus25_utils/boundary/: boundary.py  glorys_obc_processor.py  pad.py  readme.md  readme_tpxo.md  tpxo_obc_processor.py
src/mom6_neus25_utils/data_download/: era_download.py  glofas_download.py  glorys_download.py
src/mom6_neus25_utils/rivers/: bgc_processor_a_runoff_ave.py  bgc_processor_b.py  bgc_processor_c_combine.py  glofas_processor.py  glofas_runoff_climatology.py  readme.md
src/mom6_neus25_utils/sponge/: readme.md  write_nudging_data_tgb.py  write_nudging_grid_tgb.py
src/mom6_neus25_utils/yaml_examples/: bgc_processor.yaml  era5_processor.yaml  glofas_processor.yaml  glorys_obc_processor.yaml  tpxo_obc_processor.yaml  write_nudging.yaml
