[project]
authors = [{name = "dksasaki", email = "dalton.sasaki@gmail.com"}]
dependencies = []
name = "mom6-neus25-utils"
requires-python = ">= 3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mom6_neus25_utils = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
xarray = "2023.10.1.*"
xesmf = "0.8.2.*"
esmpy = "8.4.2.*"
dask = "2023.10.1.*"
netcdf4 = "1.6.5.*"
matplotlib = "3.8.1.*"
cartopy = "0.22.0.*"
jupyter = "1.0.0.*"
numpy = "1.26.0.*"
python = "3.9.18.*"
importlib_metadata = "7.0.1.*"
